Angular Version Update: 16-17 : Iteration 3

--- a/src/app/modules/main/content/components/admin/child-components/members/member-profile/member-profile.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/members/member-profile/member-profile.component.html
@@ -50,7 +50,7 @@
                                     </div>
                                     <div class="flex justify-between p-4 border-b border-gray-200">
                                         <div class="text-gray-500">Email</div>
-                                        <div class="">sagardesai@email.com</div>
+                                        <div class="">sagardesai&#64;email.com</div>
                                     </div>
                                     <div class="flex justify-between p-4 border-b border-gray-200">
                                         <div class="text-gray-500">Team</div>
