--- a/src/app/modules/main/content/components/admin/child-components/members/members.component.html
+++ b/src/app/modules/main/content/components/admin/child-components/members/members.component.html
@@ -139,7 +139,7 @@
               </div>
               <div class="w-full h-80 overflow-y-auto">
                 <div class="w-full flex justify-start items-center p-3 border-b border-gray-200 hover:bg-gray-50" *ngFor="let member of [0,1,2]">
-                  <div class="w-6/12">Sagar Desai <br> <span class="text-xs text-gray-500">sagar@email.com</span></div>
+                  <div class="w-6/12">Sagar Desai <br> <span class="text-xs text-gray-500">sagar&#64;email.com</span></div>
                   <div class="w-6/12 text-center flex justify-start">
                     <button mat-flat-button color="primary" class="">Re-send Invite</button>
                     <button mat-stroked-button style="margin-left: 10%">Revoke Invite</button>
