--- a/src/app/modules/auth/components/sign-in/sign-in.component.html
+++ b/src/app/modules/auth/components/sign-in/sign-in.component.html
@@ -3,7 +3,7 @@
     <!-- Title -->
     <div class="w-7/12">
         <div class="w-full font-bold text-xl">Welcome back!</div>
-        <div class="w-full text-gray-500 text-lg"><span class="text-blue-500 font-bold">Sign in</span> to your account & start tracking your project releases.</div>
+        <div class="w-full text-gray-500 text-base"><span class="text-blue-500 font-bold">Sign in</span> to your account & start tracking your project releases.</div>
     </div>
 
     <!-- Org Search Form -->
