--- a/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
@@ -1,3 +1,22 @@
-<div class="">
-    
+<!-- If no objectives are present. -->
+<div class="w-full flex flex-wrap mt-14">
+    <div class="w-full py-6 text-center text-gray-700">Hey, currently there are no objectives added for this release.</div>
+    <div class="w-full flex justify-center">
+        <button mat-flat-button class="" color="primary">Let's start adding Release Objectives</button>
+    </div>
+</div>
+
+<!-- Loading Block -->
+<div class="w-full mt-14 flex items-center justify-center">
+    <mat-spinner class="mr-2" diameter="22"></mat-spinner> Fetching release objectives...
+</div>
+
+<!-- View Block -->
+<div class="w-full"></div>
+
+<!-- Form Block -->
+<div class="w-full">
+
+    <!-- Title -->
+    <div class="w-full text-lg">Add Release Objective</div>
 </div>
