--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -161,7 +161,7 @@
                         </div>
 
                         <!-- Active Component Outlet -->
-                        <div class="w-9/12 min-h-72 p-4">
+                        <div class="w-9/12 min-h-72 py-4 px-6">
                             <div class="w-full">
                                 <ng-container *ngComponentOutlet="activeComponent; inputs:activeComponentInputs"></ng-container>
                             </div>
